@@ -208,6 +208,30 @@
 
         </LinearLayout>
 
+        <LinearLayout
+          style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Icon.Clickable"
+          android:onClick="@{() -> viewModel.showDefaultDueDaysBottomSheet()}"
+          clickUtil="@{clickUtil}">
+
+          <ImageView
+            style="@style/Widget.Grocy.ImageView.ListItem.Icon"
+            android:src="@drawable/ic_round_event"
+            tools:ignore="ContentDescription" />
+
+          <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox">
+
+            <TextView
+              style="@style/Widget.Grocy.TextView.ListItem.OverLine"
+              android:text="@string/setting_default_due_days" />
+
+            <TextView
+              style="@style/Widget.Grocy.TextView.ListItem.Title"
+              android:text="@{viewModel.defaultDueDaysTextLive}"/>
+
+          </LinearLayout>
+
+        </LinearLayout>
+
         <TextView
           style="@style/Widget.Grocy.TextView.Category"
           android:text="@string/title_stock_overview" />
