@@ -3,6 +3,7 @@ This is the last beta before the final v2.0.0 release. Please report any issues 
 have come up with the recent changes so that the final version is as bug-free as possible.
 - New: Support for server version 3.1.3
 - New: Native support for Android 12
+- New: Preset option in stock settings for "Default due days" of new products
 - Improved: Open Food Facts look up is back, together with page for linking new barcodes (#353)
 - Improved: Deactivated features on server are now hidden (#397)
 - Improved: Long press items on due date page from product to enter date instead of number (#458)
